--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     margin: 0;
     font-family: Arial, sans-serif;
     color: #fff;
-    overflow-x: hidden;
     background: #111;
+    overflow-x: hidden;
   }
 
-  /* FUNDO */
+  /* Fundo */
   #bg{
     position: fixed;
     top:0; left:0;
@@ -39,20 +39,21 @@
 
   header{
     text-align:center;
-    padding:30px;
-    font-size:32px;
+    padding:30px 10px;
+    font-size:28px;
     font-weight:bold;
   }
 
   .container{
     max-width:850px;
     margin:20px auto;
-    padding:20px;
+    padding:0 15px;
   }
 
   ul{
     list-style:none;
     padding:0;
+    margin:0;
   }
 
   li{
@@ -63,42 +64,39 @@
     transition:0.5s;
   }
 
-  /* ESTILO DOS TÍTULOS (RESPONSIVO) */
   a{
     text-decoration:none;
-    display:flex;
-    align-items:center;
-    justify-content:center;
+    display:block;
+    width:100%;
     padding:14px 20px;
     font-size:20px;
     background:#f4c26b;
     color:#111;
     border-radius:10px;
+    box-sizing:border-box;
     box-shadow:0 3px 8px #0006;
     font-weight:bold;
     transition:.3s;
-    margin:auto;
   }
 
-  /* PC */
   @media (min-width: 900px){
     a{
-      width: 50%;
+      width: 60%;
+      margin:auto;
     }
   }
 
-  /* Tablet */
   @media (min-width: 600px) and (max-width: 899px){
     a{
-      width: 70%;
+      width: 80%;
+      margin:auto;
     }
   }
 
-  /* CELULAR – tela toda */
   @media (max-width: 599px){
     a{
       width: 100%;
-      border-radius: 0; 
+      border-radius: 0;
     }
   }
 
@@ -108,6 +106,7 @@
   }
 </style>
 </head>
+
 <body>
 
 <div id="bg"></div>
@@ -126,7 +125,6 @@
 
 <script>
   const bg = document.getElementById("bg");
-
   const cores = ["#f4c26b","#b34714","#8c3a12","#e97824","#59200d"];
   const tipos = ["quadrado", "circulo", "triangulo", "losango"];
 
