--- a/index.html
+++ b/index.html
@@ -104,6 +104,20 @@
     transform:scale(1.05);
     background:#ffdd96;
   }
+
+  /* FOOTER FIXO */
+  footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: #000;
+    color: #ccc;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 14px;
+    opacity: 0.9;
+  }
 </style>
 </head>
 
@@ -111,7 +125,7 @@
 
 <div id="bg"></div>
 
-<header>Projetos dos Alunos</header>
+<header>20 de Novembro: Dia de Resistir e Relembrar</header>
 
 <div class="container">
   <ul id="lista">
@@ -122,6 +136,10 @@
     <li><a href="Erick/consciencia negra/Consequencia negra/index.html">Tereza de Benguela</a></li>
   </ul> 
 </div>
+
+<footer>
+  © Consciência Negra é reconhecer a luta, honrar a história e construir um futuro mais justo. <br>Projeto criado pelos alunos da escola Bílingue de Taguatinga - 2025 - 
+</footer>
 
 <script>
   const bg = document.getElementById("bg");
