--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 <div id="bg"></div>
 
-<header>20 de Novembro: Dia de Resistir e Relembrar</header>
+<header>20 de Novembro: <br>Dia de Resistir e Relembrar <br> </header>
 
 <div class="container">
   <ul id="lista">
