--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 </div>
 
 <footer>
-  © Consciência Negra é reconhecer a luta, honrar a história e construir um futuro mais justo. <br>Projeto criado pelos alunos da escola Bílingue de Taguatinga - 2025 - 
+  © Projeto criado pelos alunos da escola Bílingue de Taguatinga - 2025 - 
 </footer>
 
 <script>
